@@ -11,23 +11,23 @@ EBUILD unscd-0.39.ebuild 623 SHA256 521dbe3f749fb940fb7b7436ed695ffbf9ac9c2e6e71
 EBUILD unscd-0.45.ebuild 664 SHA256 1aec145e14827d640c612fc9e1d2abff5bee3320728c0a99d30e36564dc1dd13 SHA512 3842b484cddc2c10ac9a759c85a4db28442e71a95a48e2316c1f7654d0c6be3045be5e7502e453cf3d54dc489cfa7a3f4315abd0f2c5340cf886f2a2eff89d7c WHIRLPOOL 1863ec10c661f9a0e3e4875f603a902c9a0653bdafc8ab59913646d06cf5e68d7ca214473a3ccf262da96b857f4fec84b30e161394ef57de3e2f8109bb1eb9ad
 EBUILD unscd-0.47.ebuild 664 SHA256 f4584b498aea853e9a6c453e792123aaafea78ea6a52a06836382d1743acde93 SHA512 471276c9b058c89008d62811628835580e7de39ce74d6f4c04173be024accd1b326b7c32f3bd4938ba5c2fc22169d2738c41018c4b91a3dfe0389fe45d896a53 WHIRLPOOL 13c4aa8ec5c001b5585636485fa4215690b61d6aae8733937b0ee981743e155e2da14e72ec9626270f45fb23ccf2b1cdd217a238203eaec11e8f401ffc0bf5dc
 EBUILD unscd-0.48.ebuild 664 SHA256 f78aa7ccda16a9f0456b3942b1793ceb0412d551c78ea06d1fb1d5fcb4f53140 SHA512 2b17fa4aa42e0a583d5d0047975f5d3c059aa438505b07d8eb282bbbee7830183215b97d42d411df6fc203857eff86a28b01edac0e2f9addd3d7c5bc99ddc4dd WHIRLPOOL 717ae06ff6aeaa8e8c94be3020cc44d34a8301609119284bc496f60e92fb25d6eb1b71b1fa1d2d23697860a961b5dd1bf7255a698b8bdcb0558c84e1156ff808
-EBUILD unscd-0.49.ebuild 662 SHA256 cbcac0f7d780d72226c92955c77309bab94a2323b0606d9cf89acbd3339f06f9 SHA512 f8b7b90f9d3179d92b0e14bbe509d4c5d8416c8248462b09933015aa376cac1274514b299ce54077ae7945b5bd192bc81391d8c4fefdea3b6f03a300076547ff WHIRLPOOL 2752755155c92913eb3f9241a1ff64a844c252c2cd89e0eedd5eb0d3316f82f8e0ba81921a43131affb6aff209824705ab2a022193f9032e11973b22fac9b11d
-MISC ChangeLog 1779 SHA256 67582287ef389be9d0f8a2c0c752fa4313a467409ef212e82815c759252a3351 SHA512 23de9fb80e3ad0bc2ffb3978d83318f0e509291d910c557b637d86958cf60310f54903d43c3cbcb359ca391e79345208f3a30b475fc387f22d897d1f5842d2cf WHIRLPOOL 5568c09a242ce0d87ff9acd174e487fa676b8388488e3d12ccf53cbbfb96423d4f22f28ba46eba417774cf518867bb89c3c31213da2096ed5d7a6805e8ecc923
+EBUILD unscd-0.49.ebuild 706 SHA256 e50eabbceb89bdbb20eb475c8c7e365b7c392b1b78c67c7d297d52821ab72f58 SHA512 49813535a66c71471117a6f236421d6d12a6e35246dfd310f019392f24db0b75ad009f4c8496a3892b31767072f8c5dab6991a476355f36fe4ec5979e045e00f WHIRLPOOL 1fe92acb7b4df0f0a25c13633df907a23b59184ef8e9599f9ef3d0b4914337fc61d6480baf3c82b5924fa630117cd1e9d40f2554a4fd70d3589c8dc86231b66b
+MISC ChangeLog 1915 SHA256 9faa59cf72733c3db12ac3da014ebf437d9c7a1e31a729649b87c8f14b37fb24 SHA512 c98647f4bb1a5397004f25d670faa5eadaa5788ba307e921d232a34da04543943bba13bb1010a5f2c2ee86cac71fdd341a64eb9bdf797b539c6eeb54286f6bc2 WHIRLPOOL ac00647050c2961d349f885b5eae73c4e7dc0ded87149cd790eaffca5408625529f17ca09f28914909f0331966ad214dee83f2464abf1676ed3ba33900b4a075
 MISC metadata.xml 162 SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a SHA512 2a857e10b277827773a6c7967e070d7bfff23d75f44fa4d4fa8a7339df3225e6dba512a865d91c9c55bdb013dafdce85dface1b845acfbb5473e232666cdda45 WHIRLPOOL f7586c1570803b3e646f0be89ba6c767e82ec6889ef92d15f62a38f1410ed9d82c36892e5e83f694471959783d0d5ad667f1a39b7eb51f2080c269d5fa23d819
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIbBAEBCAAGBQJQJSgwAAoJELEHsLL7fEFWRJgP+NcoqFPrN6KzsKyY9Q0u5ptG
-cLdhAya1nZNThVhI67lJqQTldY2T/WYqsTOcBNi3AvyLjqKzAf547/1HRkxP3eeH
-xG0PrKpolGDYtjgBRBBkRQIQweFtc39nT/atVG7LimuuuvBv5M8iV9xfJX8qVNoi
-KgXAy4tc0F6wXnVIk9RUgaHsHFoSHWCxRgKGlMLu//J5mDFhOzP4TatHA62L9tWm
-p7HdcpeElNerd8YKm3PbZTzbBkGTPMHeOWgz0tdCiqbQtoPDkTMxgv2Ku3yn6AgI
-/FNhPSs5AwkqpWHhAns+7qAt+o8WJhlFno4S7jS2LZZ9BM3pQ76Uveqpg2z5KKCp
-js04tnnbngeg3teI+VctYMvyJ/njNHYUGaE6QNVPqvi49APt1xBdfHA1fi1kbM04
-HdTG8WqRGwQYExoazzwYtBc9nC/dKp02qN24RTwgeaNyiAt6m6B1cZZkDXL4KJ+9
-oaI8XwNMRcQUN1vPvjAU69hsjcSHptowGQLCMp8F6pt5WZ7CZBcf6IwbIsuYdSvz
-aVO3ZrbzlZrC8CKjyNkxw0UyjEAk9eIncsv+SUCkNeRgxf3TYidcvfNNU21aLcob
-fJOUQlCdM27bL6oUD7vifdst+T+xtbw4My/eiGT1Jec5ob70VMISrx+T7OwyqePi
-ivbGz+QhLs3D7OZV73E=
-=TBPt
+iQIcBAEBCAAGBQJRm7oAAAoJELEHsLL7fEFWr7IQAMjHlNz9KuTONk6u5Che+EBJ
+2nP/HiXstN7YchL4RLdU2d8yrqkhGWe2061t4pVz1RML4gsj4XSM2eMh6+nUN+hz
+5kjXpyGlapgKCA2DmHxpMVfI7GjHxAzMQ00Qt/lgwaan9O2617HcURU4j8ZGttC9
+slmoJJIXVcpIbl8DPQfNqnGrKbVhFDFzUsgptnWp2nGqve7DMiwT6WP4tjS8fnoN
+CWFW6Uy0VmZ5N/qW2wGnm4P+sXbI9CvTFzlgnlSGONs8zjWi/V0PaYTYcCiG53z5
+33cZ4vsdS03SEKKxdMsLt4/wV9UrXeS/qWXlvr01vWErJLXp7lWcjfrPwoIwpVD4
+CJJuCy+olUuVvYuv3eTuA1z/hGivSdh3qTkSsaSsdk//anTaw+ocigPbwpQj0yh7
+29pnAIU+0IPWX1a0VBpP8OCUgEKtcgsI+5q2e+OGbPPZe2mN8Lb79384JD/OzdSh
++93ByYBjK/tHUE1V7V2RxHbb0pQscocO9z1b49nfjXIXFoJ4EFsK/EyejEPCoXF0
+yyRe3DBEFAT2rstE3eBfWzzIxG5SnoZ+dXXKNgl1UMQV39YRzwh0j/sE9rVz0Mab
+VCIipyD5s+6ES+GpZrh3gHS25Ir9d9DaY741llUdkiShQHXVI174h6sKsuCCAJB0
+J8cbEQxV6uTLbJruEq2O
+=xjVI
 -----END PGP SIGNATURE-----
