@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/unscd
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/unscd/ChangeLog,v 1.12 2012/08/10 15:26:34 vapier Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/unscd/ChangeLog,v 1.13 2013/05/21 18:16:28 vapier Exp $
+
+  21 May 2013; Mike Frysinger <vapier@gentoo.org> unscd-0.49.ebuild:
+  Require glibc be built with USE=nscd #469624 by Volker Hemmann.
 
   10 Aug 2012; Mike Frysinger <vapier@gentoo.org> unscd-0.49.ebuild:
   Stabilize for all #430750 by Plopmaster.
